v0.0.5 fix-horizontal scrolling

--- a/assets/style/components/_banner.css
+++ b/assets/style/components/_banner.css
@@ -1,12 +1,18 @@
 .banner {
     overflow: hidden;
-    position: relative;
     height: 380px;
-    width: 100vw;
-    left: calc(-50vw + 50%);
-    background: linear-gradient(-75deg, #FEE4FF, #EFF9FF);
     z-index: 1;
     transition: height .5s ease;
+}
+
+.banner::before {
+    content: '';
+    position: absolute;
+    height: 380px;
+    width: 100vw;
+    max-width: 100%;
+    left: calc(-50vw + 50%);
+    background: linear-gradient(-75deg, #FEE4FF, #EFF9FF);
 }
 
 .banner::after {
@@ -279,7 +285,7 @@
         padding: 0 16px;
     }
 
-    .banner {
+    .banner, .banner::before  {
         height: 328px;
     }
 
@@ -367,7 +373,7 @@
         display: block;
     }
 
-    .banner {
+    .banner, .banner::before  {
         height: 450px;
     }
 
