--- a/assets/style/components/_header.css
+++ b/assets/style/components/_header.css
@@ -11,9 +11,10 @@
     height: 120px;
     position: absolute;
     content: "";
-    left: calc(-50% + 50vw);
+    left: 0;
     background-color: var(--white-color);
-    width: 100vw;
+    max-width: 100vw;
+    width: 100%;
 }
 
 .header a {
@@ -22,7 +23,6 @@
 }
 
 .header-top {
-    position: relative;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -105,9 +105,10 @@
     position: absolute;
     content: "";
     left: calc(-50vw + 50%);
-    bottom: 0;
+    top: 52px;
     height: 1px;
     width: 100vw;
+    max-width: 100%;
     background: var(--stick-color);
 }
 
@@ -306,7 +307,7 @@
     }
 
     .header {
-        padding: 0;
+        padding: 0 16px;
         height: 167px;
     }
 
